fix to comment and carousael overlapping issue

--- a/WebContent/static/css/index.css
+++ b/WebContent/static/css/index.css
@@ -31,7 +31,6 @@ body {
 
 #myCarousel {
 	width: 1000px;
-	height:500px;
 	margin-left: auto;
   	margin-right: auto;
 }
@@ -103,6 +102,7 @@ body {
   stroke-width: 1.5px;
   transition: opacity 0.5s ease-in-out, stroke 0.4s ease-in-out, fill 0.5s ease-in-out;
   -moz-transition: opacity 0.5s ease-in-out, stroke 0.4s ease-in-out, fill 0.5s ease-in-out;
+  -ms-transition: opacity 0.5s ease-in-out, stroke 0.4s ease-in-out, fill 0.5s ease-in-out;
   -webkit-transition: opacity 0.5s ease-in-out, stroke 0.4s ease-in-out, fill 0.5s ease-in-out;
   -o-transition: opacity 0.5s ease-in-out, stroke 0.4s ease-in-out, fill 0.5s ease-in-out;
 }
@@ -126,6 +126,11 @@ body {
 .hover-box-body {
   fill: #444;
   font: 12px sans-serif;
+}
+
+#disqus_thread {
+	width: 1000px;
+	margin: 0 auto 20px auto;
 }
 
 .footer {
